--- a/app/views/pages/about.haml
+++ b/app/views/pages/about.haml
@@ -1,3 +1,4 @@
-%h1 Tell people about your app!
-
-%p pages#about
+%section.section
+  .container
+    %h1.title Tell people about your app!
+    %p pages#about
