--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,9 @@
     %meta{ content: "text/html; charset=UTF-8", "http-equiv": "Content-Type" }
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1" }
     %meta{ "http-equiv": "x-ua-compatible", content: "ie=edge" }
+
     = action_cable_meta_tag
+
     = tag :meta, name: "stripe-key", content: Pay::Stripe.public_key
     -# Sprockets application.js
     = javascript_include_tag "application", "data-turbolinks-track": "reload"
@@ -14,16 +16,11 @@
     -# Webpacker application.css
     = stylesheet_pack_tag 'application'
     = javascript_include_tag "https://js.stripe.com/v3/"
+
     = csrf_meta_tags
+
   %body{ turbolinks? }
     = render "layouts/past_due" if user_signed_in? && !current_user.on_trial_or_subscribed?
-    .mb-2
-      = render user_signed_in? ? "layouts/navbar_loggedin" : "layouts/navbar_loggedout"
-    .container
-      - flash.each do |name, msg|
-        - if msg.is_a?(String)
-          .alert.alert-dismissible{class: "alert-#{name}", role: "alert"}
-            %button.close{type: "button", "data-dismiss": "alert", "aria-label": "Close"}
-              %span{"aria-hidden": true} &times;
-            = msg
-      = yield
+    = render user_signed_in? ? "shared/navbar/signed_in" : "shared/navbar/signed_out"
+    = render 'shared/messages'
+    = yield
