--- a/app/views/pages/cancelled.haml
+++ b/app/views/pages/cancelled.haml
@@ -1,3 +1,4 @@
-%h1 Your account has been cancelled :'(
-
-%p Put pictures of sad puppies here. Maybe a small survey about why they cancelled.
+%section.section
+  .container
+    %h1.title Your account has been cancelled :'(
+    %p Put pictures of sad puppies here. Maybe a small survey about why they cancelled.
