--- a/app/views/pages/features.haml
+++ b/app/views/pages/features.haml
@@ -1,3 +1,4 @@
-%h1 Tell people about your features!
-
-%p pages#features
+%section.section
+  .container
+    %h1.title Tell people about your features!
+    %p pages#features
