--- a/app/views/pages/pro.haml
+++ b/app/views/pages/pro.haml
@@ -1,10 +1,11 @@
-%h1 Welcome to the coveted Pro Page!
-
-%p
-  You can only see this page if you have the
-  %code pro
-  role. The only way to get the pro role is if a Stripe webhook (
-  %code> customer.subscription.updated
-  ) reports that the customer subscription has been updated and has the plan which has the
-  %code pro
-  associated_role. Neat, right?
+%section.section
+  .container
+    %h1.title Welcome to the coveted Pro Page!
+    %p
+      You can only see this page if you have the
+      %code pro
+      role. The only way to get the pro role is if a Stripe webhook (
+      %code> customer.subscription.updated
+      ) reports that the customer subscription has been updated and has the plan which has the
+      %code pro
+      associated_role. Neat, right?
