--- a/app/views/pages/features.haml
+++ b/app/views/pages/features.haml
@@ -1,4 +1,101 @@
+%section.hero.is-primary.is-medium
+  .hero-body
+    .container
+      %h1.title SaaS Template
+      %h2.subtitle Build and sell your amazing software!
+
 %section.section
   .container
-    %h1.title Tell people about your features!
-    %p pages#features
+    .columns
+      .column.is-6
+        .content
+          %h1.title Lorem ipsum dolor sit amet
+          %p
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+            finibus arcu quis consequat ultrices. Praesent sollicitudin bibendum
+            libero, non varius arcu placerat sed. Pellentesque et nisl id nisi
+            imperdiet commodo. Etiam posuere mauris id lacinia commodo. Nulla
+            vitae arcu libero. Nunc imperdiet lobortis consectetur. Quisque
+            tempus vehicula nulla, non consectetur ligula egestas vitae. Aliquam
+            elementum ipsum ut ante porta vestibulum. Praesent nisl massa,
+            pretium eget placerat vitae, scelerisque ut nunc. Aenean faucibus
+            posuere augue et mollis. Maecenas eleifend lacinia felis ut varius.
+          %p
+            Curabitur ut lacus vel urna sagittis faucibus. In non ante eget
+            lacus mollis suscipit. Phasellus ornare magna at ornare porta. In
+            enim tellus, maximus eu ultricies nec, aliquet pretium ex. Morbi
+            eleifend porttitor felis, a egestas ante tempor id. Morbi ac
+            convallis lorem. Suspendisse laoreet turpis urna, eget eleifend
+            arcu dictum at. Morbi imperdiet mi quis tellus pharetra feugiat. In
+            hac habitasse platea dictumst. Proin sagittis a neque nec porta.
+            Pellentesque nec nisl in magna lobortis ullamcorper aliquet
+            consectetur orci.
+
+      .column.is-6
+        .content
+          %figure.image.is-3by2
+            = image_tag 'https://via.placeholder.com/600x400'
+
+%section.section.has-background-white-ter
+  .container
+    .columns
+      .column.is-6
+        .content
+          %figure.image.is-3by2
+            = image_tag 'https://via.placeholder.com/600x400'
+
+      .column.is-6
+        .content
+          %h1.title Lorem ipsum dolor sit amet
+          %p
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+            finibus arcu quis consequat ultrices. Praesent sollicitudin bibendum
+            libero, non varius arcu placerat sed. Pellentesque et nisl id nisi
+            imperdiet commodo. Etiam posuere mauris id lacinia commodo. Nulla
+            vitae arcu libero. Nunc imperdiet lobortis consectetur. Quisque
+            tempus vehicula nulla, non consectetur ligula egestas vitae. Aliquam
+            elementum ipsum ut ante porta vestibulum. Praesent nisl massa,
+            pretium eget placerat vitae, scelerisque ut nunc. Aenean faucibus
+            posuere augue et mollis. Maecenas eleifend lacinia felis ut varius.
+          %p
+            Curabitur ut lacus vel urna sagittis faucibus. In non ante eget
+            lacus mollis suscipit. Phasellus ornare magna at ornare porta. In
+            enim tellus, maximus eu ultricies nec, aliquet pretium ex. Morbi
+            eleifend porttitor felis, a egestas ante tempor id. Morbi ac
+            convallis lorem. Suspendisse laoreet turpis urna, eget eleifend
+            arcu dictum at. Morbi imperdiet mi quis tellus pharetra feugiat. In
+            hac habitasse platea dictumst. Proin sagittis a neque nec porta.
+            Pellentesque nec nisl in magna lobortis ullamcorper aliquet
+            consectetur orci.
+
+%section.section
+  .container
+    .columns
+      .column.is-6
+        .content
+          %h1.title Lorem ipsum dolor sit amet
+          %p
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+            finibus arcu quis consequat ultrices. Praesent sollicitudin bibendum
+            libero, non varius arcu placerat sed. Pellentesque et nisl id nisi
+            imperdiet commodo. Etiam posuere mauris id lacinia commodo. Nulla
+            vitae arcu libero. Nunc imperdiet lobortis consectetur. Quisque
+            tempus vehicula nulla, non consectetur ligula egestas vitae. Aliquam
+            elementum ipsum ut ante porta vestibulum. Praesent nisl massa,
+            pretium eget placerat vitae, scelerisque ut nunc. Aenean faucibus
+            posuere augue et mollis. Maecenas eleifend lacinia felis ut varius.
+          %p
+            Curabitur ut lacus vel urna sagittis faucibus. In non ante eget
+            lacus mollis suscipit. Phasellus ornare magna at ornare porta. In
+            enim tellus, maximus eu ultricies nec, aliquet pretium ex. Morbi
+            eleifend porttitor felis, a egestas ante tempor id. Morbi ac
+            convallis lorem. Suspendisse laoreet turpis urna, eget eleifend
+            arcu dictum at. Morbi imperdiet mi quis tellus pharetra feugiat. In
+            hac habitasse platea dictumst. Proin sagittis a neque nec porta.
+            Pellentesque nec nisl in magna lobortis ullamcorper aliquet
+            consectetur orci.
+
+      .column.is-6
+        .content
+          %figure.image.is-3by2
+            = image_tag 'https://via.placeholder.com/600x400'
