--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -1,16 +1,29 @@
-.row.justify-content-md-center
-  .col-md-8
-    %h2 Sign up
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = f.hidden_field :plan_id, value: params[:plan_id] || Plan.active.first.try(:id)
-      = devise_error_messages!
-      = f.input :email, autofocus: true, required: true
-      .row.form-group
-        .col-6
-          = f.input :first_name, required: true
-        .col-6
-          = f.input :last_name, required: true
-      - min_pword_string = @minimum_password_length ? "Password (#{@minimum_password_length} characters minimum)" : 'Password'
-      = f.input :password, label: min_pword_string, autocomplete: 'new-password'
-      .actions
-        = f.submit "Begin your free trial", class: 'btn btn-primary'
+%section.section
+  .container
+    .columns
+      .column.is-4
+        .content
+          %h1.title Sign up
+          = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+            = f.hidden_field :plan_id, value: params[:plan_id] || Plan.active.first.try(:id)
+            = devise_error_messages!
+
+            .field
+              .control
+                = f.email_field :email, autofocus: true, required: true, class: 'input', placeholder: t(:email)
+
+            .field
+              .control
+                = f.text_field :first_name, required: true, class: 'input', placeholder: t(:first_name)
+
+            .field
+              .control
+                = f.text_field :last_name, required: true, class: 'input', placeholder: t(:last_name)
+
+            - min_pword_string = @minimum_password_length ? "Password (#{@minimum_password_length} characters minimum)" : 'Password'
+
+            .field
+              = f.password_field :password, label: min_pword_string, autocomplete: 'new-password', class: 'input', placeholder: t(:password)
+
+            .buttons
+              = f.submit "Begin your free trial", class: 'button is-primary'
